--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mkdocs-ponylang",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Ponylang Material theme for MkDocs",
   "keywords": [
     "mkdocs",
@@ -41,10 +41,10 @@
     "chalk": "^2.0.1",
     "clipboard": "^2.0.0",
     "copy-webpack-plugin": "^4.2.1",
-    "css-loader": "^0.28.7",
+    "css-loader": "^0.28.11",
     "css-mqpacker": "^6.0.1",
     "custom-event-polyfill": "^0.3.0",
-    "customizr": "^1.0.0-alpha",
+    "customizr": "^1.1.0",
     "escape-string-regexp": "^1.0.5",
     "eslint": "^4.3.0",
     "event-hooks-webpack-plugin": "^1.0.0",
@@ -55,7 +55,7 @@
     "git-hooks": "^1.1.8",
     "highlight.js": "^9.12.0",
     "html-minifier": "^3.5.6",
-    "imagemin-webpack-plugin": "^2.0.0",
+    "imagemin-webpack-plugin": "^2.3.0",
     "js-cookie": "^2.1.4",
     "lunr": "^2.1.2",
     "lunr-languages": "^1.0.0",
@@ -63,7 +63,7 @@
     "material-shadows": "^3.0.1",
     "modernizr-auto-loader": "^0.1.0",
     "modularscale-sass": "^3.0.3",
-    "node-sass": "^4.7.2",
+    "node-sass": "^4.9.4",
     "postcss-loader": "^2.0.8",
     "promise-polyfill": "^7.0.0",
     "sass-loader": "^6.0.6",
